# libswiftnav

./: CMakeLists.txt
include/libswiftnav/: amb_kf.h  test_swig.h
src/: CMakeLists.txt  amb_kf.c  ambiguity_test.c  test_swig.c
swig/: CMakeLists.txt  dgnss_management.i  do_shit.py  swiftnav.i  test_swig.i  test_swig.py  test_swig_wrap.c
tests/: check_amb_kf.c  check_utils.c
